--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "jdkim",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
