--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-cssmin": "~0.7.0"
   }
 }
