--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-open": "~0.2.2"
+    "grunt-open": "~0.2.2",
+    "load-grunt-tasks": "~0.2.1"
   }
 }
