Show the link of types from config.

--- a/src/2_config.json
+++ b/src/2_config.json
@@ -25,5 +25,11 @@
     "non-edge characters": [
         " ",
         "\n"
-    ]
+    ],
+    "entity types": [{
+        "color": "#0000FF",
+        "name": "Parent",
+        "uri": "http://dbpedia.org/ontology/parent",
+        "default": true
+    }]
 }
