--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
   "author": "jdkim",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-qunit": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt-browserify": "^2.1.3",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-qunit": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-jasmine-node": "^0.2.1",
     "grunt-open": "~0.2.2",
     "grunt-text-replace": "^0.3.12",
+    "jquery": "^2.1.1",
+    "jsdom": "^0.11.1",
     "load-grunt-tasks": "~0.2.1"
   }
 }
