Bug fix: Editing modifications is disable.

--- a/.jshintrc
+++ b/.jshintrc
@@ -5,8 +5,5 @@
   "newcap": true,
   "noarg": true,
   "regexp": true,
-  "trailing": true,
-  "globals": {
-    "textAeUtil": true
-  }
+  "trailing": true
 }
