--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "jquery": "^2.1.1",
     "jsdom": "^0.11.1",
     "load-grunt-tasks": "~0.2.1"
+  },
+  "dependencies": {
+    "promise": "^5.0.0"
   }
 }
