--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "text annotation editor",
   "main": "src/development.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -16,8 +17,9 @@
     "DBCLS"
   ],
   "author": "jdkim",
-  "license": "BSD-2-Clause",
+  "license": "",
   "devDependencies": {
+    "bower": "^1.3.12",
     "grunt-browserify": "^2.1.4",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.3.0",
