--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "underscore": "~1.7.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "toastr": "~2.1.0"
   }
 }
