--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "emitter-fsm": "0.0.2"
   },
   "devDependencies": {
+    "6to5ify": "^3.1.2",
     "bower": "^1.3.12",
     "grunt-browserify": "^3.3.0",
     "grunt-cli": "^0.1.13",
