--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "4.1.7",
   "author": "jdkim",
   "dependencies": {
-    "promise": "^5.0.0"
+    "bluebird": "^2.8.2"
   },
   "devDependencies": {
     "bower": "^1.3.12",
