--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "grunt-jasmine-node": "^0.2.1",
     "grunt-open": "~0.2.3",
     "grunt-text-replace": "^0.4.0",
-    "jquery": "^2.1.3",
-    "jsdom": "^3.0.2",
     "load-grunt-tasks": "~3.0.0"
   },
   "keywords": [
@@ -38,6 +36,6 @@
   },
   "scripts": {
     "postinstall": "node_modules/bower/bin/bower install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt jasmine_node"
   }
 }
