--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "4.1.7",
   "author": "jdkim",
   "dependencies": {
-    "bluebird": "^2.8.2"
+    "bluebird": "^2.8.2",
+    "emitter-fsm": "0.0.2"
   },
   "devDependencies": {
     "bower": "^1.3.12",
