--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "jdkim",
   "dependencies": {
     "bluebird": "^2.8.2",
-    "emitter-fsm": "0.0.2"
+    "emitter-fsm": "0.0.2",
+    "handlebars": "^2.0.0"
   },
   "devDependencies": {
     "6to5ify": "^3.1.2",
