--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bluebird": "^2.8.2",
     "emitter-fsm": "0.0.2",
-    "handlebars": "^2.0.0"
+    "handlebars": "^2.0.0",
+    "observ": "^0.2.0"
   },
   "devDependencies": {
     "6to5ify": "^3.1.2",
