--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "jdkim",
   "dependencies": {
     "bluebird": "^2.8.2",
+    "capitalize": "^0.5.0",
     "emitter-fsm": "0.0.2",
     "handlebars": "^2.0.0",
     "observ": "^0.2.0"
