--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "capitalize": "^0.5.0",
     "emitter-fsm": "0.0.2",
     "handlebars": "^2.0.0",
+    "not": "^0.1.0",
     "observ": "^0.2.0"
   },
   "devDependencies": {
