Use the  less to compile a css.

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ src/lib/bundle.js
 src/vender/jquery/
 src/vender/toastr/
 src/vender/underscore/
+src/lib/css/textae.css
 src/lib/css/textae-control.css
+src/lib/css/textae-editor.css
 src/lib/css/textae-editor-dialog.css
+src/lib/css/textae-editor-type-pallet.css
