--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "observ": "^0.2.0"
   },
   "devDependencies": {
-    "6to5ify": "^3.1.2",
+    "babelify": "^6.1.1",
     "bower": "^1.3.12",
     "grunt-browserify": "^3.3.0",
     "grunt-cli": "^0.1.13",
