--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "emitter-fsm": "0.0.2",
     "handlebars": "^2.0.0",
     "not": "^0.1.0",
-    "observ": "^0.2.0"
+    "observ": "^0.2.0",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "babelify": "^6.1.1",
