--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-jshint": "^0.11.2",
@@ -33,13 +33,14 @@
     "grunt-jasmine-node": "^0.3.1",
     "grunt-open": "~0.2.3",
     "grunt-text-replace": "^0.4.0",
-    "load-grunt-tasks": "~3.2.0"
+    "load-grunt-tasks": "~3.2.0",
+    "serve-static": "^1.10.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
   "keywords": [
-    "javascript",
+    "DBCLS",
     "annotation",
-    "DBCLS"
+    "javascript"
   ],
   "license": "MIT",
   "main": "src/development.html",
