--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-open": "~0.2.3",
     "grunt-text-replace": "^0.4.0",
     "load-grunt-tasks": "~3.2.0",
+    "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
