--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "grunt-text-replace": "^0.4.0",
     "load-grunt-tasks": "~3.2.0",
     "serve-favicon": "^2.3.0",
-    "serve-static": "^1.10.0"
+    "serve-static": "^1.10.0",
+    "watchify": "^3.4.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
   "keywords": [
@@ -65,6 +66,7 @@
   "scripts": {
     "postinstall": "node_modules/bower/bin/bower install",
     "test": "grunt jasmine_node",
-    "watch": "grunt dev"
+    "watch": "npm run watchify & grunt dev",
+    "watchify": "watchify -d src/lib/jquery.textae.js -t babelify -o src/lib/bundle.js"
   }
 }
