Create a directory of dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 node_modules/
 npm-debug.log
 *.dev_data.json
+dev/bundle.js
+dev/vender/jquery/
+dev/vender/toastr/
+dev/vender/underscore/
 src/lib/bundle.js
-src/vender/jquery/
-src/vender/toastr/
-src/vender/underscore/
 src/lib/css/textae.css
 src/lib/css/textae-control.css
 src/lib/css/textae-editor.css
