--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "postinstall": "node_modules/bower/bin/bower install",
     "test": "grunt jasmine_node",
     "watch": "npm run watchify & grunt dev",
-    "watchify": "watchify -d src/lib/jquery.textae.js -t babelify -o src/lib/bundle.js"
+    "watchify": "watchify -d src/lib/jquery.textae.js -t babelify -o dev/bundle.js"
   }
 }
