--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "babel-runtime": "^5.8.34",
     "babelify": "^6.4.0",
     "eslint": "^1.5.1",
-    "grunt-browserify": "^4.0.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.7.0",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
     "grunt-contrib-copy": "^0.8.1",
@@ -46,13 +44,14 @@
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^17.2.0",
     "grunt-open": "~0.2.3",
     "grunt-text-replace": "^0.4.0",
     "load-grunt-tasks": "~3.3.0",
+    "npm-run-all": "^1.7.0",
+    "rimraf": "^2.5.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.7.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
   "keywords": [
@@ -67,8 +66,13 @@
     "url": "https://github.com/pubannotation/textae.git"
   },
   "scripts": {
+    "browserify": "browserify src/lib/jquery.textae.js -o src/lib/bundle.js",
+    "clean": "rimraf dist/* src/lib/bundle.js",
+    "grunt-dist": "grunt dist",
+    "dist": "npm-run-all lint clean browserify grunt-dist",
+    "lint": "eslint src/lib",
     "test": "grunt jasmine_node",
     "watch": "npm run watchify & grunt dev",
-    "watchify": "watchify -d src/lib/jquery.textae.js  -o dev/bundle.js"
+    "watchify": "watchify -d src/lib/jquery.textae.js -o dev/bundle.js"
   }
 }
