--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^2.1.4",
     "not": "^0.1.0",
     "observ": "^0.2.0",
+    "sticky-kit": "^1.1.3",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "xtend": "^4.0.0",
