--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-runtime": "^5.8.34",
     "babelify": "^6.4.0",
     "eslint": "^1.5.1",
+    "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
