--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "serve-static": "^1.10.0",
     "sticky-kit": "^1.1.3",
     "toastr": "^2.1.2",
+    "uglify-save-license": "^0.4.1",
     "watchify": "^3.7.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
