--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "textae",
   "description": "text annotation editor",
-  "version": "4.5.4",
+  "version": "4.5.5",
   "author": "jdkim",
   "browserify": {
     "transform": [
@@ -20,7 +20,8 @@
     "jquery": "./node_modules/jquery/dist/jquery.min.js",
     "jq-ui": "./src/lib/modules/jquery-ui.min.js",
     "stickykit": "./src/lib/modules/sticky-kit.js",
-    "js-plumb": "./src/lib/modules/jquery.jsPlumb-1.5.2.js"
+    "js-plumb": "./src/lib/modules/jquery.jsPlumb-1.5.2.js",
+    "jsoneditor": "./src/lib/modules/jsoneditor.min.js"
   },
   "browserify-shim": {
     "jquery": "$",
@@ -36,7 +37,8 @@
         "jquery:$"
       ]
     },
-    "js-plumb": "global:js-plumb"
+    "js-plumb": "global:js-plumb",
+    "jsoneditor": "global:jsoneditor"
   },
   "bugs": {
     "url": "https://github.com/pubannotation/textae/issues"
