--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: TextAE Home
 email: admin@pubannotation.org
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The homepage of TextAE. The HML-embeddable text annotation editor
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
