ADD: show config diffs on the save dialog.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "emitter-fsm": "0.0.2",
     "handlebars": "^4.0.2",
     "jquery": "^2.1.4",
+    "jsondiffpatch": "^0.2.5",
     "not": "^0.1.0",
     "observ": "^0.2.0",
     "sticky-kit": "^1.1.3",
