--- a/package.json
+++ b/package.json
@@ -50,12 +50,9 @@
     "element-closest": "^1.0.3",
     "emitter-fsm": "0.0.2",
     "handlebars": "^4.0.2",
-    "jquery": "^2.1.4",
     "jsondiffpatch": "^0.2.5",
     "not": "^0.1.0",
     "observ": "^0.2.0",
-    "sticky-kit": "^1.1.3",
-    "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "xtend": "^4.0.0",
     "yui": "^3.18.1"
@@ -65,7 +62,7 @@
     "babelify": "^6.4.0",
     "browserify-shim": "^3.8.12",
     "eslint": "^1.5.1",
-    "grunt": "^1.0.1",
+    "grunt": "~0.4.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.11.2",
