--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "jquery": "./src/lib/modules/browserify-hax.js",
     "static-jquery": "./node_modules/jquery/dist/jquery.min.js",
     "jq-ui": "./node_modules/jquery-ui-dist/jquery-ui.min.js",
-    "stickykit": "./src/lib/modules/sticky-kit.js",
     "js-plumb": "./src/lib/modules/jquery.jsPlumb-1.5.2.js",
     "jsoneditor": "./src/lib/modules/jsoneditor.min.js"
   },
@@ -35,6 +34,7 @@
     "jsondiffpatch": "^0.2.5",
     "not": "^0.1.0",
     "observ": "^0.2.0",
+    "sticky-kit": "github:leafo/sticky-kit",
     "underscore": "^1.8.3",
     "xtend": "^4.0.0",
     "yui": "^3.18.1"
@@ -64,7 +64,6 @@
     "rimraf": "^2.5.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
-    "sticky-kit": "^1.1.3",
     "toastr": "^2.1.2",
     "uglify-save-license": "^0.4.1",
     "watchify": "^3.7.0"
