--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "not": "^0.1.0",
     "observ": "^0.2.0",
     "sticky-kit": "github:leafo/sticky-kit",
+    "throttleit": "^1.0.0",
     "underscore": "^1.8.3",
     "xtend": "^4.0.0",
     "yui": "^3.18.1"
