--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "jquery": "./src/lib/modules/browserify-hax.js",
     "static-jquery": "./node_modules/jquery/dist/jquery.min.js",
     "jq-ui": "./node_modules/jquery-ui-dist/jquery-ui.min.js",
-    "js-plumb": "./src/lib/modules/jquery.jsPlumb-1.5.2.js",
-    "jsoneditor": "./src/lib/modules/jsoneditor.min.js"
+    "js-plumb": "./src/lib/modules/jquery.jsPlumb-1.5.2.js"
   },
   "bugs": {
     "url": "https://github.com/pubannotation/textae/issues"
