code-style: Ban one-var

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "rules": {
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "one-var": ["warn", "never"]
   },
   "env": {
     "browser": true,
