code-style: Use object shorthand

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "no-unused-vars": "off",
     "one-var": ["warn", "never"],
     "no-var": "warn",
-    "prefer-const": "warn"
+    "prefer-const": "warn",
+    "object-shorthand": ["warn", "always"]
   },
   "env": {
     "browser": true,
