--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-runtime": "^5.8.34",
     "babelify": "^6.4.0",
     "browserify-shim": "^3.8.12",
+    "debounce": "^1.2.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
