--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "^7.5.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babelify": "^10.0.0",
+    "browserify": "^16.5.0",
     "browserify-shim": "^3.8.12",
     "deamdify": "^0.3.0",
     "debounce": "^1.2.0",
@@ -65,7 +66,7 @@
     "toastr": "^2.1.2",
     "uglify-save-license": "^0.4.1",
     "uglifyify": "^5.0.2",
-    "watchify": "^3.7.0"
+    "watchify": "^3.11.1"
   },
   "homepage": "https://github.com/pubannotation/textae",
   "keywords": [
