--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "browserify-shim": "^3.8.12",
     "capitalize": "^1.0.0",
     "clean-css-cli": "^4.3.0",
+    "concat": "^1.0.3",
+    "connect": "^3.7.0",
+    "cpx": "^1.5.0",
     "deamdify": "^0.3.0",
     "debounce": "^1.2.0",
     "delegate": "^3.0.0",
@@ -33,23 +36,19 @@
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "grunt": "^1.0.4",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-open": "~0.2.3",
-    "grunt-text-replace": "^0.4.0",
     "handlebars": "^4.0.2",
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
     "jsondiffpatch": "^0.2.5",
+    "less": "^3.10.3",
+    "less-watch-compiler": "^1.14.1",
     "load-grunt-tasks": "~3.3.0",
-    "npm-run-all": "^1.7.0",
+    "mkdirp": "^0.5.1",
+    "npm-run-all": "^1.8.0",
     "observ": "^0.2.0",
+    "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
+    "replace-in-file": "^4.1.3",
     "rimraf": "^2.5.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
@@ -73,14 +72,28 @@
     "url": "https://github.com/pubannotation/textae.git"
   },
   "scripts": {
-    "browserify": "browserify -g deamdify -g uglifyify src/index.js -o src/lib/bundle.js",
-    "clean": "rimraf dist/* src/lib/bundle.js",
-    "cleancss": "cleancss -o dist/lib/css/$npm_package_name-$npm_package_version.min.css dist/lib/css/$npm_package_name-$npm_package_version.css",
-    "dist": "npm-run-all clean lint browserify grunt-dist cleancss",
-    "grunt-dist": "grunt dist",
-    "lint": "eslint src/lib",
-    "test": "grunt jasmine_node",
-    "watch": "npm run watchify & grunt dev",
-    "watchify": "watchify -g deamdify -d src/index.js -o dev/bundle.js"
+    "dev:open": "open-cli 'http://localhost:8000/dev/development.html'",
+    "dev:server": "node dev/development-sever.js",
+    "dev:watch-less": "less-watch-compiler src/lib/css src/lib/css textae.less",
+    "dev:watchify": "watchify -g deamdify -d src/index.js -o dev/bundle.js",
+    "dist": "npm-run-all dist:clean dist:build",
+    "dist:browserify": "browserify -g deamdify -g uglifyify src/index.js -o src/lib/bundle.js",
+    "dist:build": "npm-run-all -p dist:build:**",
+    "dist:build:copy": "npm-run-all dist:copy dist:replace:version",
+    "dist:build:css": "npm-run-all dist:less dist:concat:css dist:cleancss",
+    "dist:build:js": "npm-run-all dist:lint dist:browserify dist:concat:js",
+    "dist:clean": "rimraf dist/* src/lib/bundle.js",
+    "dist:cleancss": "cleancss -o dist/lib/css/$npm_package_name-$npm_package_version.min.css dist/lib/css/$npm_package_name-$npm_package_version.css",
+    "dist:concat:css": "mkdirp dist/lib/css & concat -o dist/lib/css/$npm_package_name-$npm_package_version.css src/lib/css/textae.css",
+    "dist:concat:js": "mkdirp dist/lib & concat -o dist/lib/$npm_package_name-$npm_package_version.min.js node_modules/jquery/dist/jquery.min.js src/lib/modules/jquery.jsPlumb-1.5.5-min.js src/lib/bundle.js",
+    "dist:copy": "npm-run-all -p dist:copy:**",
+    "dist:copy:app": "cpx src/app/editor.html dist",
+    "dist:copy:demo": "cpx 'src/demo/**' dist/demo",
+    "dist:copy:fonts": "cpx 'src/lib/fonts/**' dist/lib/fonts",
+    "dist:copy:images": "cpx 'src/lib/css/images/**.png' dist/lib/css/images",
+    "dist:less": "lessc 'src/lib/css/textae.less' 'src/lib/css/textae.css'",
+    "dist:lint": "eslint src/lib",
+    "dist:replace:version": "replace-in-file /{{version}}/g $npm_package_version dist/editor.html,dist/demo/**/*.html --isRegex",
+    "watch": "npm-run-all -p dev:watchify dev:watch-less dev:server dev:open"
   }
 }
