--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "ajv": "^6.10.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
