refactor: Update libraries

--- a/package.json
+++ b/package.json
@@ -19,43 +19,43 @@
     "url": "https://github.com/pubannotation/textae/issues"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "ajv": "^6.10.2",
+    "@babel/core": "^7.8.3",
+    "ajv": "^6.11.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
-    "browserify-shim": "^3.8.12",
-    "capitalize": "^1.0.0",
+    "browserify-shim": "^3.8.14",
+    "capitalize": "^2.0.1",
     "clean-css-cli": "^4.3.0",
     "concat": "^1.0.3",
     "connect": "^3.7.0",
     "cpx": "^1.5.0",
     "deamdify": "^0.3.0",
     "debounce": "^1.2.0",
-    "delegate": "^3.0.0",
+    "delegate": "^3.2.0",
     "dohtml": "^0.1.0",
     "emitter-fsm": "0.0.2",
-    "eslint": "^6.2.2",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "handlebars": "^4.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "handlebars": "^4.7.2",
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
     "jsondiffpatch": "^0.2.5",
     "less": "^3.10.3",
-    "less-watch-compiler": "^1.14.1",
+    "less-watch-compiler": "^1.14.5",
     "mkdirp": "^0.5.1",
-    "npm-run-all": "^1.8.0",
+    "npm-run-all": "^4.1.5",
     "observ": "^0.2.0",
     "open-cli": "^5.0.0",
-    "prettier": "^1.18.2",
-    "replace-in-file": "^4.1.3",
-    "rimraf": "^2.5.2",
-    "serve-favicon": "^2.3.0",
-    "serve-static": "^1.10.0",
+    "prettier": "^1.19.1",
+    "replace-in-file": "^5.0.2",
+    "rimraf": "^3.0.0",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "^1.14.1",
     "sticky-kit": "github:leafo/sticky-kit",
     "throttleit": "^1.0.0",
-    "toastr": "^2.1.2",
+    "toastr": "^2.1.4",
     "uglifyify": "^5.0.2",
     "watchify": "^3.11.1",
     "yui": "^3.18.1"
@@ -96,5 +96,6 @@
     "dist:lint": "eslint src/lib",
     "dist:replace:version": "replace-in-file /{{version}}/g $npm_package_version dist/editor.html,dist/demo/**/*.html --isRegex",
     "watch": "npm-run-all -p dev:watchify dev:watch-less dev:server dev:open"
-  }
+  },
+  "dependencies": {}
 }
