--- a/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
+++ b/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
@@ -61,6 +61,7 @@
       "type": "array",
       "items": {
         "type": "object",
+        "required": ["pred", "value type"],
         "properties": {
           "pred": {
             "type": "string"
@@ -103,6 +104,7 @@
               }
             },
             "then": {
+              "required": ["values"], 
               "properties": {
                 "values": {
                   "type": "array",
@@ -122,6 +124,7 @@
               }
             },
             "then": {
+              "required": ["default", "values"], 
               "properties": {
                 "default": {
                   "type": "string"
@@ -159,6 +162,7 @@
               }
             },
             "then": {
+              "required": ["default", "min", "max", "step", "values"], 
               "properties": {
                 "default": {
                   "type": "number"
