feature: Enable autocomplete search URL in config

--- a/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
+++ b/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
@@ -51,6 +51,10 @@
     "non-edge characters": {
       "$ref": "#/definitions/characters"
     },
+    "autocompletion_ws": {
+      "type": "string",
+      "format": "uri-reference"
+    },
     "entity types": {
       "$ref": "#/definitions/types"
     },
