bugfix: For the numeric attribute, the values property is not required

--- a/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
+++ b/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
@@ -172,7 +172,7 @@
               }
             },
             "then": {
-              "required": ["default", "min", "max", "step", "values"], 
+              "required": ["default", "min", "max", "step"], 
               "properties": {
                 "default": {
                   "type": "number"
