bugfix: For the string attribute, the values property is not required

--- a/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
+++ b/src/lib/editor/Model/AnnotationData/validateConfiguration/configurationScheme.json
@@ -131,7 +131,7 @@
               }
             },
             "then": {
-              "required": ["default", "values"], 
+              "required": ["default"], 
               "properties": {
                 "autocompletion_ws": {
                   "$ref": "#/definitions/autocompletion_ws"
