--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.8.3",
     "ajv": "^6.11.0",
     "alertifyjs": "^1.13.1",
+    "array-move": "^2.2.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
