feature: Enable/disable auto-save, line height auto-adjustment and boundary detection from the configuration file

--- a/src/lib/editor/start/validateConfigurationAndAlert/validateConfiguration/configurationScheme.json
+++ b/src/lib/editor/start/validateConfigurationAndAlert/validateConfiguration/configurationScheme.json
@@ -58,6 +58,15 @@
     "autocompletion_ws": {
       "$ref": "#/definitions/autocompletion_ws"
     },
+    "autosave": {
+      "type": "boolean"
+    },
+    "autolineheight": {
+      "type": "boolean"
+    },
+    "boundarydetection": {
+      "type": "boolean"
+    },
     "entity types": {
       "$ref": "#/definitions/types"
     },
