misc: Switch from browserify to web pack

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "concat": "^1.0.3",
     "connect": "^3.7.0",
     "cpx": "^1.5.0",
-    "deamdify": "^0.3.0",
     "debounce": "^1.2.0",
     "delegate": "^3.2.0",
     "dohtml": "^0.1.0",
@@ -56,8 +55,9 @@
     "serve-static": "^1.14.1",
     "sticky-kit": "github:leafo/sticky-kit",
     "throttleit": "^1.0.0",
-    "uglifyify": "^5.0.2",
     "watchify": "^3.11.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "yui": "^3.18.1"
   },
   "homepage": "https://github.com/pubannotation/textae",
@@ -76,9 +76,9 @@
     "dev:open": "open-cli 'http://localhost:8000/dev/development.html'",
     "dev:server": "node dev/development-sever.js",
     "dev:watch-less": "less-watch-compiler src/lib/css src/lib/css textae.less",
-    "dev:watchify": "watchify -g deamdify -d src/index.js -o dev/bundle.js",
+    "dev:watchify": "webpack --config webpack.dev.js",
     "dist": "npm-run-all dist:clean dist:build",
-    "dist:browserify": "browserify -g deamdify -g uglifyify src/index.js -o src/lib/bundle.js",
+    "dist:browserify": "webpack --config webpack.prod.js",
     "dist:build": "npm-run-all -p dist:build:**",
     "dist:build:copy": "npm-run-all dist:copy dist:replace:version",
     "dist:build:css": "npm-run-all dist:less dist:concat:css dist:cleancss",
