--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm-run-all": "^4.1.5",
     "observ": "^0.2.0",
     "open-cli": "^6.0.1",
+    "path-browserify": "^1.0.1",
     "prettier": "^1.19.1",
     "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
@@ -39,7 +40,8 @@
     "serve-static": "^1.14.1",
     "sticky-kit": "github:leafo/sticky-kit",
     "throttleit": "^1.0.0",
-    "webpack": "^4.44.2",
+    "url": "^0.11.0",
+    "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
