--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "handlebars": "^4.7.6",
+    "husky": "^4.3.0",
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
     "jsondiffpatch": "^0.4.1",
     "less": "^3.12.2",
     "less-watch-compiler": "^1.14.6",
+    "lint-staged": "^10.5.1",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "observ": "^0.2.0",
@@ -46,12 +48,22 @@
     "webpack-merge": "^5.3.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "keywords": [
     "DBCLS",
     "annotation",
     "javascript"
   ],
   "license": "MIT",
+  "lint-staged": {
+    "*.js": [
+      "prettier --write"
+    ]
+  },
   "main": "src/development.html",
   "repository": {
     "type": "git",
