misc: Do not run the prettier from the ESLint
# Conflicts:
#	package-lock.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,7 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:prettier/recommended"
+    "eslint:recommended"
   ],
   "globals": {
     "jsPlumb": true
