--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "throttleit": "^1.0.0",
     "url": "^0.11.0",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.1.0"
+    "webpack-cli": "^4.1.0",
+    "webpack-merge": "^5.3.0"
   },
   "homepage": "https://github.com/pubannotation/textae",
   "keywords": [
