refactor: Use async-await syntax

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "jsPlumb": true
   },
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion":  2017
   } 
 }
