misc: Introduce the eslint-plugin-import

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "prefer-const": "warn",
     "object-shorthand": ["warn", "always"],
     "prefer-arrow-callback": "warn",
-    "prefer-template": "warn"
+    "prefer-template": "warn",
+    "import/no-unresolved": "error"
   },
   "env": {
     "browser": true,
@@ -22,5 +23,8 @@
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion":  2017
-  } 
+  },
+  "plugins": [
+    "import"
+  ]
 }
