--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "emitter-fsm": "0.0.2",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "handlebars": "^4.7.6",
     "husky": "^4.3.0",
     "jquery": "^2.2.4",
