misc: Update npm package ajv

--- a/src/lib/editor/start/validateConfigurationAndAlert/validateConfiguration/configurationScheme.json
+++ b/src/lib/editor/start/validateConfigurationAndAlert/validateConfiguration/configurationScheme.json
@@ -11,7 +11,8 @@
       }
     },
     "color": {
-      "pattern": "^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$"
+      "pattern": "^#([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$",
+      "type": "string"
     },
     "default": {
       "type": "boolean"
