--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "ajv": "^6.12.6",
+    "ajv": "^7.0.1",
+    "ajv-formats": "^1.5.1",
     "alertifyjs": "^1.13.1",
     "array-move": "^3.0.1",
     "clean-css-cli": "^4.3.0",
@@ -40,6 +41,7 @@
     "rimraf": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.14.1",
+    "source-map-loader": "^1.1.3",
     "sticky-kit": "github:leafo/sticky-kit",
     "throttleit": "^1.0.0",
     "url": "^0.11.0",
