--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "object-shorthand": ["warn", "always"],
     "prefer-arrow-callback": "warn",
     "prefer-template": "warn",
-    "import/no-unresolved": "error"
+    "import/no-unresolved": "error",
+    "unused-imports/no-unused-imports": "error"
   },
   "env": {
     "browser": true,
@@ -25,6 +26,7 @@
     "ecmaVersion":  2017
   },
   "plugins": [
-    "import"
+    "import",
+    "unused-imports"
   ]
 }
