--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-unused-imports": "^1.0.1",
     "handlebars": "^4.7.6",
     "husky": "^4.3.6",
     "jquery": "^2.2.4",
