refactor: Format less files by the prettier at commit

--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
   "lint-staged": {
     "*.js": [
       "prettier --write"
+    ],
+    "*.less": [
+      "prettier --write"
     ]
   },
   "main": "src/development.html",
