misc: Install @typescript-eslint/parser@^4.0.0 for the eslint-plugin-unused-imports

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@typescript-eslint/parser": "^4.11.0",
     "ajv": "^7.0.2",
     "ajv-formats": "^1.5.1",
     "alertifyjs": "^1.13.1",
