--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/parser": "^4.11.0",
     "ajv": "^7.0.2",
     "ajv-formats": "^1.5.1",
+    "ajv-keywords": "^4.0.0",
     "alertifyjs": "^1.13.1",
     "array-move": "^3.0.1",
     "clean-css-cli": "^4.3.0",
