--- a/package.json
+++ b/package.json
@@ -6,48 +6,49 @@
   "bugs": {
     "url": "https://github.com/pubannotation/textae/issues"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@typescript-eslint/parser": "^4.11.0",
+  "dependencies": {
     "ajv": "^7.0.2",
     "ajv-formats": "^1.5.1",
     "ajv-keywords": "^4.0.0",
     "alertifyjs": "^1.13.1",
     "array-move": "^3.0.1",
-    "clean-css-cli": "^4.3.0",
-    "concat": "^1.0.3",
-    "connect": "^3.7.0",
-    "cpx2": "^3.0.0",
     "debounce": "^1.2.0",
     "delegate": "^3.2.0",
     "dohtml": "^0.1.0",
     "emitter-fsm": "0.0.2",
+    "handlebars": "^4.7.6",
+    "jquery": "^2.2.4",
+    "jquery-ui": "^1.12.1",
+    "jsondiffpatch": "^0.4.1",
+    "observ": "^0.2.0",
+    "path-browserify": "^1.0.1",
+    "sticky-kit": "github:leafo/sticky-kit",
+    "throttleit": "^1.0.0",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^4.11.0",
+    "clean-css-cli": "^4.3.0",
+    "concat": "^1.0.3",
+    "connect": "^3.7.0",
+    "cpx2": "^3.0.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-unused-imports": "^1.0.1",
-    "handlebars": "^4.7.6",
     "husky": "^4.3.6",
-    "jquery": "^2.2.4",
-    "jquery-ui": "^1.12.1",
-    "jsondiffpatch": "^0.4.1",
     "less": "^4.0.0",
     "less-watch-compiler": "^1.14.6",
     "lint-staged": "^10.5.3",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "observ": "^0.2.0",
     "open-cli": "^6.0.1",
-    "path-browserify": "^1.0.1",
     "prettier": "^2.2.1",
     "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.14.1",
     "source-map-loader": "^1.1.3",
-    "sticky-kit": "github:leafo/sticky-kit",
-    "throttleit": "^1.0.0",
-    "url": "^0.11.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-merge": "^5.7.2"
