feature: HTML escaping of autocomplete candidates

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "delegate": "^3.2.0",
     "dohtml": "^0.1.0",
     "emitter-fsm": "0.0.2",
+    "eskape": "^1.2.0",
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
     "jsondiffpatch": "^0.4.1",
