--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^2.2.4",
     "jquery-ui": "^1.12.1",
     "jsondiffpatch": "^0.4.1",
+    "lodash.escape": "^4.0.1",
     "observ": "^0.2.0",
     "path-browserify": "^1.0.1",
     "sticky-kit": "github:leafo/sticky-kit",
